# turborepo-base

./: .gitignore  .npmignore  .npmrc  README.md  application.toml  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
apps/example/: README.md  index.html  package.json  tsconfig.json
apps/example/env/: .env.development  .env.production
apps/example/src/: App.tsx  main.tsx
apps/example/src/store/: index.ts
apps/generator/: .env  Cargo.toml  application.toml
apps/generator/src/: main.rs
apps/generator/src/ast/: parser.rs  store.rs
apps/generator/src/cli/: mod.rs
apps/generator/src/config/: default.rs  mod.rs
apps/generator/src/models/: mod.rs
apps/generator/src/parser/: mod.rs
apps/generator/src/parser/app/: component.rs  mod.rs  new.rs
apps/generator/src/parser/lib/: mod.rs  new.rs
apps/generator/src/parser/util/: mod.rs  store.rs
apps/generator/src/utils/: folder.rs  log.rs  mod.rs  path.rs  string.rs
apps/generator/template/app/src/router/routes-module/: mainRoutes.tsx
apps/generator/template/component/: index.scss  index.tsx
apps/generator/template/lib/: .nycrc.json  cypress.config.ts  tsconfig.json
apps/generator/template/lib/cypress/component/: tool.cy.ts
apps/generator/template/lib/cypress/support/: component-index.html  e2e.ts
apps/generator/template/store/: define.ts  reducers.ts  selectors.ts
apps/toolbox/: build.gradle.kts  settings.gradle.kts
custom-build/: config-define.ts  copy.plugin.ts  default-config.ts
docs/: CHANGELOG.md  gen.todo.md  版本发布.md
(+6 files in other folders)
