[package]
name = "generator"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.0.4"
dialoguer = "0.11.0"
dotenv = "0.15.0"
heck = "0.5.0"
lazy_static = "1.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9.33"
toml = "0.8.12"
anyhow = "1.0.82"
ratatui = { version = "0.26.2", features = ["all-widgets"] }
crossterm = "0.27.0"
oxc = { version = "0.12.5", features = ["serialize", "codegen"] }